--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:src="@drawable/white_instagram_text_logo1" />
+        android:layout_height="wrap_content"
+        android:src="@mipmap/login" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -60,8 +60,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:background="#b96f00ff"
+        android:background="#b9658cff"
         android:text="Log In"
         android:textColor="#cccccc" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:text="I don't have an account."
+        android:textColor="#ffffff"
+        android:textSize="16sp" />
 
 </LinearLayout>
