--- a/app/src/main/res/drawable/gradientbackground1.xml
+++ b/app/src/main/res/drawable/gradientbackground1.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:angle="45"
-        android:startColor="#aaff00"
-        android:endColor="#ff00aa"
+        android:startColor="#1100ff"
+        android:endColor="#00ffff"
         />
     <corners android:radius="100dp" />
 
