--- a/app/src/main/res/drawable/gradientbackground1.xml
+++ b/app/src/main/res/drawable/gradientbackground1.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:angle="45"
-        android:startColor="#1100ff"
-        android:endColor="#00ffff"
-        />
-    <corners android:radius="100dp" />
+    <!--<gradient-->
+    <!--android:startColor="#00ffffff"-->
+    <!--android:endColor="#00000000"-->
+    <!--/>-->
+    <solid android:color="#5500f2ff" />
+    <stroke android:color="#fff"
+        android:width="2dp"/>
 
 </shape>
+
