--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,18 +11,64 @@
         android:id="@+id/appTitle"
         android:layout_width="400dp"
         android:layout_height="60dp"
-        android:src="@mipmap/engord" />
+        android:src="@mipmap/engord_splash" />
 
-    <ImageView
-        android:id="@+id/modeTitle"
-        android:layout_height="30dp"
-        android:layout_width="wrap_content"
-        android:src="@mipmap/login" />
+    <LinearLayout
+        android:weightSum="3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:id="@+id/modeTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:src="@mipmap/login" />
+
+        <com.google.android.gms.common.SignInButton
+            android:layout_marginVertical="10dp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:id="@+id/google_signin_button"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:id="@+id/orBorder"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/white_border" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="8dp"
+                android:text="OR"
+                android:textColor="#fff" />
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/white_border" />
+        </LinearLayout>
+    </LinearLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:textColorHint="#cccccc">
 
         <EditText
@@ -61,28 +107,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginTop="16dp"
         android:text="Forgot Password?"
         android:textColor="#ffffff"
         android:textSize="16sp" />
 
     <Button
         android:id="@+id/submitButton"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="@drawable/gradientbackground1"
         android:text="Log In"
         android:textColor="#fff" />
 
-    <TextView
+    <Button
         android:id="@+id/typeChange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
-        android:text="I don't have an account."
+        android:background="@drawable/gradientbackground1"
+        android:text="  Create an account  "
         android:textColor="#ffffff"
         android:textSize="16sp" />
+
 
 </LinearLayout>
