--- a/app/src/main/res/layout/fragment_comp_detail.xml
+++ b/app/src/main/res/layout/fragment_comp_detail.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     tools:context=".home.CompDetailFragment">
 
+    <Button
+        android:id="@+id/comp_detail_challenge_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="チャレンジする"/>
+
     <android.support.v7.widget.CardView
         android:id="@+id/compDetailCardView"
         android:layout_width="match_parent"
