--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -22,6 +22,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInput1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="競技のルール">
@@ -38,8 +39,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="#fff"
+        android:background="@drawable/gradientbackground"
         android:enabled="false"
-        android:text="新しく競技を作成する" />
+        android:text=" 新しく競技を作成する " />
 
 
     <TextView
