--- a/app/src/main/res/layout/fragment_video_upload.xml
+++ b/app/src/main/res/layout/fragment_video_upload.xml
@@ -1,43 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradientbackground"
     android:orientation="vertical"
-    android:layout_weight="4"
     tools:context=".contribution.record.VideoActivity">
-
-    <VideoView
-        android:id="@+id/uploadVideoPreviewView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="3"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="1">
+        android:weightSum="2"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <EditText
-            android:id="@+id/uploadEditText"
+        <VideoView
+            android:layout_marginBottom="30dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:id="@+id/uploadVideoPreviewView"
+            android:layout_width="wrap_content"
+            android:layout_height="280dp" />
+
+        <LinearLayout
+            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="ユーザー名(暫定)を入力してください" />
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/uploadButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Upload" />
+            <TextView
+                android:id="@+id/uploadUserName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="8dp"
+                android:text="ユーザー名"
+                android:textColor="#fff"
+                android:textSize="24dp" />
+            <!--<EditText-->
+            <!--android:id="@+id/uploadEditText"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:ems="10"-->
+            <!--android:inputType="textPersonName"-->
+            <!--android:hint="ユーザー名(暫定)を入力してください" />-->
 
-        <Button
-            android:id="@+id/catchButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Catch"/>
+            <TextView
+                android:id="@+id/uploadVideoDuration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="8dp"
+                android:text="00:00:00"
+                android:textColor="#fff"
+                android:textSize="40dp"
+                android:textStyle="italic" />
+
+            <Button
+                android:id="@+id/uploadButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/gradientbackground1"
+                android:text="Upload"
+                android:textColor="#fff" />
+
+            <Button
+                android:id="@+id/catchButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/gradientbackground1"
+                android:text="Catch"
+                android:textColor="#fff" />
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
